prowlarr/values/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: linuxserver/prowlarr:latest
          ports:
            - containerPort: 9696
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: "50m"
              memory: "100Mi"
            limits:
              cpu: "0.5"
              memory: "512Mi"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config-pvc
